# playground

./: Q.md  t.py
client-gen/: README.md  pyproject.toml
client-gen/client/: README.md  setup.py
client-gen/client-gen/: server.py
client-gen/client/.openapi-generator/: FILES
client-gen/client/docs/: DefaultApi.md  Item.md  ResponseMessage.md
client-gen/client/openapi_client/: __init__.py  rest.py
client-gen/client/openapi_client/api/: default_api.py
client-gen/client/openapi_client/models/: __init__.py  http_validation_error.py  item.py  response_message.py  validation_error.py
client-gen/client/test/: test_default_api.py  test_http_validation_error.py  test_item.py  test_response_message.py  test_validation_error.py
