[tool.poetry]
name = "client-gen"
version = "0.1.0"
description = ""
authors = ["Alon David <alondavid13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "<2"
fastapi = {extras = ["all"], version = "<0.100.0"}
openapi-client = {path = "client"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipython = "8.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
